fix: color contraste arreglado

--- a/css/game.css
+++ b/css/game.css
@@ -10,9 +10,11 @@ body {
 }
 
 .navbar {
-    background-color:#268eae ;
+    background-color:#196076 ;
 }
-
+.container h1 {
+    color: #fff;
+}
 .container-fluid {
     flex: 1; 
     display: flex;
@@ -93,4 +95,17 @@ body {
 
 #cell-svg-container {
     overflow: auto;
+}
+
+.container button {
+    color: #d9d9d9;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    -webkit-box-shadow: 10px 10px 30px -9px rgba(0,0,0,0.63);
+-moz-box-shadow: 10px 10px 30px -9px rgba(0,0,0,0.63);
+box-shadow: 10px 10px 30px -9px rgba(0,0,0,0.63);
+    background-color: #d9d9d9;
+    color: black;
+    font-weight: bolder;
+    border-radius: 30px;
 }
